attempt to fix scalability on mobile device

--- a/src/Componenets/Cocurricular.css
+++ b/src/Componenets/Cocurricular.css
@@ -19,7 +19,7 @@
 }
 @media (max-width : 800px) {
     .curr-main{
-        margin-top: 60%;
+        margin-top: 110%;
     }
     
     
